# estajoj

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/models/: estajo.rs  event.rs  mod.rs  needs.rs
src/simulation/: mod.rs  parameters.rs  world.rs
src/storage/: history.rs
src/ui/: app.rs  mod.rs  tui.rs
