[package]
name = "estajoj"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
ratatui = "0.24.0"
crossterm = "0.27.0"

[dev-dependencies]
test-case = "3.3"

